fix cut off popover

--- a/src/styles/modals/signup.scss
+++ b/src/styles/modals/signup.scss
@@ -132,6 +132,7 @@
     padding-top: 15px;
 
     @media (max-width: 500px) {
+      overflow: visible;
       padding: 15px 30px 30px;
     }
 
